# madison-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: composition.py  config.py  logger.py  main.py  pyproject.toml  requests.py  requirements.txt  streamer.py
backend/application/: dependencies.py  requests.py  streamer.py
backend/application/agents/: resilience.py  supervisor_graph.py
backend/application/routers/: chat_router.py  core_router.py  webhooks.py
backend/application/services/: assistant_service.py  creator_service.py  idea_schemas.py  idea_service.py  lead_schemas.py  lead_service.py  notification_schemas.py  notification_service.py
backend/application/tests/: test_assist.py  test_email.py  test_ideas.py  test_webhook.py
backend/domain/assistant/: assistant_entity.py
backend/domain/entities/: assistant_entity.py  capture_entity.py  creator_entity.py  idea_entity.py  lead_entity.py
backend/domain/repository/: creator_repository_interface.py  email_repository_interface.py  idea_repository_interface.py  lead_repository_interface.py  telegram_repository_interface.py  template_repository_interface.py
backend/infrastructure/ai/: reply_graph.py  supervisor_graph.py  templates.py
backend/infrastructure/database/: browser.py  capture_model.py  creator_model.py  db.py  idea_model.py  lead_model.py  notification_model.py
backend/interface/: dependencies.py
backend/interface/api/: assistant.py  captures.py  (+4 more)
frontend/windows/: diagnose_capture.py  main.py  pyproject.toml  requirements.txt
(+60 files in other folders)
