[project]
name = "madison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
