[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "langgraph",
    "langgraph-checkpoint-postgres",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "psycopg[binary]",
    "psycopg-pool",
    "python-dotenv",
    "sqlalchemy",
]
